Correção de erros; Funçao de lembrete